--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    Croissant
+    <h1>Croissant</h1>
+    <div>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </div>
   </body>
 </html>
