--- a/photo.html
+++ b/photo.html
@@ -6,5 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Photo</h1>
+    <div>
+      <a href="/">Homepage</a>
+      <a href="/contact.html">Contact</a>
+    </div>
+  </body>
 </html>
