--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homepage</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <h1>Croissant</h1>
+
     <div>
       <a href="/photo.html">Photo</a>
       <a href="/contact.html">Contact</a>
