--- a/photo.html
+++ b/photo.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Croissant Photo</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <h1>Photo</h1>
+    <p>This is some photo of a croissant</p>
+    <img src="/images/croissant.jpeg" alt="Image of a croissant" />
     <div>
       <a href="/">Homepage</a>
       <a href="/contact.html">Contact</a>
