added radio input to contact.html

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <h1>Contact us</h1>
+    <div>
+      <p>Do you like croissants?</p>
+      <input type="radio" id="yes" name="croissant" />
+      <label value="yes">Yes</label>
+      <input type="radio" id="sure" name="croissant" />
+      <label value="sure">Sure</label>
+    </div>
 
     <div>
       <a href="/">Homepage</a>
