--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <h1>Croissant</h1>
+    <div class="data">
+      <div class="container">
+        <h1>Croissant</h1>
 
-    <p>
-      It is a buttery, flaky, viennoiserie pastry inspired by the shape of the
-      Austrian kipferl but using the French yeast-leavened laminated dough.[3]
-      Croissants are named for their historical crescent shape. The dough is
-      layered with butter, rolled and folded several times in succession, then
-      rolled into a thin sheet, in a technique called laminating. The process
-      results in a layered, flaky texture, similar to a puff pastry.
-    </p>
+        <p>
+          It is a buttery, flaky, viennoiserie pastry inspired by the shape of
+          the Austrian kipferl but using the French yeast-leavened laminated
+          dough.
+          <br />Croissants are named for their historical crescent shape. The
+          dough is layered with butter, rolled and folded several times in
+          succession, then rolled into a thin sheet, in a technique called
+          laminating. The process results in a layered, flaky texture, similar
+          to a puff pastry.
+        </p>
 
-    <div>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+        <div class="d-flex justify-content-center pb-4 mt-5">
+          <a href="/photo.html" class="me-3 btn btn-primary">Photo</a>
+          <a href="/contact.html" class="me-3 btn btn-primary">Contact</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
