--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,24 @@
 
         <p>
           If so, please contact us through email to get your croissant:
-          <a href="mailto:croissant@croissant.com" class="d-block"
+          <a
+            href="mailto:croissant@croissant.com"
+            title="contact email"
+            class="d-block"
             >croissant@croissant.com</a
           >
         </p>
 
         <div class="d-flex justify-content-center pb-4">
-          <a href="/" class="me-3 btn btn-primary">Homepage</a>
-          <a href="/photo.html" class="me-3 btn btn-primary">Photo</a>
+          <a href="/" class="me-3 btn btn-primary" title="Croissant Homepage"
+            >Homepage</a
+          >
+          <a
+            href="/photo.html"
+            class="me-3 btn btn-primary"
+            title="Croissant Photo page"
+            >Photo</a
+          >
         </div>
       </div>
     </div>
