--- a/photo.html
+++ b/photo.html
@@ -23,8 +23,15 @@
           class="img-fluid rounded mx-auto d-block"
         />
         <div class="d-flex justify-content-center pb-4 mt-5">
-          <a href="/" class="me-3 btn btn-primary">Homepage</a>
-          <a href="/contact.html" class="me-3 btn btn-primary">Contact</a>
+          <a href="/" class="me-3 btn btn-primary" title="Croissant Homepage"
+            >Homepage</a
+          >
+          <a
+            href="/contact.html"
+            class="me-3 btn btn-primary"
+            title="Contact Page"
+            >Contact</a
+          >
         </div>
       </div>
     </div>
