--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>Croissant Homepage</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,8 +29,18 @@
         </p>
 
         <div class="d-flex justify-content-center pb-4 mt-5">
-          <a href="/photo.html" class="me-3 btn btn-primary">Photo</a>
-          <a href="/contact.html" class="me-3 btn btn-primary">Contact</a>
+          <a
+            href="/photo.html"
+            class="me-3 btn btn-primary"
+            title="Croissant photo page"
+            >Photo</a
+          >
+          <a
+            href="/contact.html"
+            class="me-3 btn btn-primary"
+            title="Contact Page"
+            >Contact</a
+          >
         </div>
       </div>
     </div>
